@@ -9,6 +9,8 @@
 - API addition: Tree indentation can be customized.
 - Fixed GlyphLayout not respecting BitmapFontData#down.
 - API Addition: Added faceIndex paramter to #FreeTypeFontGenerator(FileHandle, int).
+- API Change: BitmapFont#getSpaceWidth changed to BitmapFont#getSpaceXadvance.
+- Many GlyphLayout fixes.
 
 [1.9.8]
 - Add iPhoneX images
